--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
     "angular-ui-router": "ui-router#^0.3.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "angular-animate": "^1.5.8"
   }
 }
